// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test scoredanswerwidget component render a scoredAnswerWidget component 1`] = `
<div
  className="form__group "
>
  <label
    className="form__question form__question--scored_answer_field scored_answer_widget"
    htmlFor="test name"
  >
    <span>
      test label
    </span>
  </label>
  <HelperComponent />
  <div
    className="form__item"
  >
    <TinyMCE
      id="test name"
      name="test name"
      onChange={[Function]}
      value="3"
    />
    <div
      className="form__select"
    >
      <DropDown
        choices={
          Array [
            1,
            2,
          ]
        }
        id="test name"
        name="test name"
        onChange={[Function]}
        value={4}
      />
    </div>
  </div>
</div>
`;

exports[`Test scoredanswerwidget component with required render a scoredAnswerWidget component with required 1`] = `
<div
  className="form__group "
>
  <label
    className="form__question form__question--scored_answer_field scored_answer_widget"
    htmlFor="test name"
  >
    <span>
      test label
    </span>
    <span
      className="form__required"
    >
       *
    </span>
  </label>
  <HelperComponent />
  <div
    className="form__item"
  >
    <TinyMCE
      id="test name"
      name="test name"
      onChange={[Function]}
      value="3"
    />
    <div
      className="form__select"
    >
      <DropDown
        choices={
          Array [
            1,
            2,
          ]
        }
        id="test name"
        name="test name"
        onChange={[Function]}
        value={4}
      />
    </div>
  </div>
</div>
`;
